<resources>
    <string name="app_name">Madhu\'s Fast Food</string>
    <string name="hey_there">Hey There!!!</string>
    <string name="login">Login</string>
    <string name="welcome_to_our_community">Welcome to our community!</string>
    <string name="not_part_of_a_community">Not part of a community?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="signUpGreeting">Sign Up to join our Community!</string>
    <string name="loginGreeting">Login to be a part of our community</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_foodList">Food List</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_view_orders">My Orders</string>

    <string name="home_second">Home Second</string>
    
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>


    <string name="food_name">Name of the food</string>
    <string name="food_price">Rs. 100</string>
    <string name="desc">Description</string>
    <string name="food_category">Food Category</string>
    <string name="vegetarian">Vegetarian</string>

    <string name="your_name">Enter your name</string>
    <string name="your_address">Enter your address</string>

    <string name="empty_cart">EMPTY CART</string>
    <string name="total">Total: 0,0</string>
    <string name="place_order">Place Order</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="clear_cart_item"><u>Clear item</u></string>

    <string name="menu_sign_out">Sign Out</string>

    <string name="delivery_method">Delivery Method</string>
    <string name="home_address">Home Address</string>
    <string name="current_location">Current Location</string>
    <string name="enter_any_additional_comments">Enter any additional comments</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="enable_location">Please enable location services !</string>

    <string name="today_at_13_05_pm">Today at 13:05 pm</string>
    <string name="order_number">Order number:</string>
    <string name="status_placed">Status: Placed</string>
    <string name="name_of_the_customer">Name of the customer</string>
    <string name="no_of_items">Number of items ordered</string>

    <string name="action_search">Search</string>


</resources>