<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mffhomedelivery.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.mffhomedelivery.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_foodList"
        android:name="com.example.mffhomedelivery.ui.foodlist.FoodListFragment"
        android:label="@string/menu_foodList"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.mffhomedelivery.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.example.mffhomedelivery.ui.orders.OrdersFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/orders_fragment" />

</navigation>