<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/address_txt_ip_lyt">

            <EditText
                android:id="@+id/edt_address"
                android:hint="@string/your_address"
                android:fontFamily="@font/brandon_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_address"
            android:fontFamily="@font/brandon_medium"
            android:visibility="gone"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:fontFamily="@font/brandon_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_comment"
                android:fontFamily="@font/brandon_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_any_additional_comments"
                android:background="@android:color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/delivery_method"
            android:textColor="@color/dialog_header_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdi_home_address"
                android:checked="true"
                android:text="@string/home_address"
                android:fontFamily="@font/brandon_medium"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/dialog_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rdi_current_address"
                android:checked="false"
                android:text="@string/current_location"
                android:fontFamily="@font/brandon_medium"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/dialog_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/payment_method"
            android:textColor="@color/dialog_header_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdi_cod"
                android:checked="true"
                android:text="@string/cash_on_delivery"
                android:textSize="18sp"
                android:fontFamily="@font/brandon_medium"
                android:textStyle="italic"
                android:textColor="@color/dialog_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_enable_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_location"
            android:textColor="@color/design_default_color_error"
            android:textStyle="italic"
            android:textSize="18sp"
            android:visibility="gone"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
