<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_order"
            android:layout_gravity="top"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="#002b64"
                android:id="@+id/txt_order_date"
                android:text="@string/today_at_13_05_pm"
                android:fontFamily="@font/brandon_medium"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_order_number"
                android:text="@string/order_number"
                android:fontFamily="@font/brandon_medium"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_order_status"
                android:text="@string/status_placed"
                android:fontFamily="@font/brandon_medium"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:textSize="13sp"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>