<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:padding="8dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/group_place_holder"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_empty_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart"
        android:fontFamily="@font/montserrat_regular"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="35sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/group_place_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:padding="8dp">

            <TextView
            android:id="@+id/txt_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_marginBottom="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/green_accent"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat_regular"
                android:textAlignment="center"
                app:cornerRadius="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
